// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'ProductFormContainer' Component tests Default 'ProductFormContainer' state Should properly mount the component 1`] = `
<withRouter(ProductFormContainer)>
  <ProductFormContainer
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      }
    }
  >
    <div
      id="productFormContainer"
    >
      <GridRow>
        <div
          className="row"
        >
          <GridColumn
            computer={14}
            mobile={16}
            tablet={15}
          >
            <div
              className="fourteen wide computer sixteen wide mobile fifteen wide tablet column"
            >
              <Button
                as="button"
                content="Open Form"
                id="productFormToggleBtn"
                onClick={[Function]}
              >
                <Ref
                  innerRef={
                    Object {
                      "current": <button
                        class="ui button"
                        id="productFormToggleBtn"
                      >
                        Open Form
                      </button>,
                    }
                  }
                >
                  <RefFindNode
                    innerRef={
                      Object {
                        "current": <button
                          class="ui button"
                          id="productFormToggleBtn"
                        >
                          Open Form
                        </button>,
                      }
                    }
                  >
                    <button
                      className="ui button"
                      id="productFormToggleBtn"
                      onClick={[Function]}
                    >
                      Open Form
                    </button>
                  </RefFindNode>
                </Ref>
              </Button>
            </div>
          </GridColumn>
        </div>
      </GridRow>
    </div>
  </ProductFormContainer>
</withRouter(ProductFormContainer)>
`;

exports[`'ProductFormContainer' Component tests Form Container state OPEN - NO Current Product Data Should Properly Mount Form Container, respond to '#productToggleBtn' click 1`] = `
<withRouter(ProductFormContainer)>
  <ProductFormContainer
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      }
    }
  >
    <div
      id="productFormContainer"
    >
      <GridRow>
        <div
          className="row"
        >
          <GridColumn
            computer={14}
            mobile={16}
            tablet={15}
          >
            <div
              className="fourteen wide computer sixteen wide mobile fifteen wide tablet column"
            >
              <Button
                as="button"
                content="Close Form"
                id="productFormToggleBtn"
                onClick={[Function]}
              >
                <Ref
                  innerRef={
                    Object {
                      "current": <button
                        class="ui button"
                        id="productFormToggleBtn"
                      >
                        Close Form
                      </button>,
                    }
                  }
                >
                  <RefFindNode
                    innerRef={
                      Object {
                        "current": <button
                          class="ui button"
                          id="productFormToggleBtn"
                        >
                          Close Form
                        </button>,
                      }
                    }
                  >
                    <button
                      className="ui button"
                      id="productFormToggleBtn"
                      onClick={[Function]}
                    >
                      Close Form
                    </button>
                  </RefFindNode>
                </Ref>
              </Button>
              <ProductForm
                description=""
                details=""
                handleCreateProduct={[Function]}
                handleUpdateProduct={[Function]}
                name=""
                newForm={true}
                price=""
              >
                <div
                  className="productFormDiv"
                >
                  <Form
                    as="form"
                    id="productForm"
                  >
                    <form
                      className="ui form"
                      id="productForm"
                      onSubmit={[Function]}
                    >
                      <FormField>
                        <div
                          className="field"
                        >
                          <label>
                            Product name
                          </label>
                          <input
                            id="adminProductFormNameInput"
                            onChange={[Function]}
                            placeholder="Product name here ..."
                            value=""
                          />
                        </div>
                      </FormField>
                      <FormField>
                        <div
                          className="field"
                        >
                          <label>
                            Product price
                          </label>
                          <input
                            id="adminProductFormPriceInput"
                            onChange={[Function]}
                            placeholder="Product price here..."
                            value=""
                          />
                        </div>
                      </FormField>
                      <FormField
                        control={[Function]}
                        id="adminProductFormDescInput"
                        label="Product Description"
                        onChange={[Function]}
                        placeholder="Product description here..."
                        value=""
                      >
                        <div
                          className="field"
                        >
                          <label
                            htmlFor="adminProductFormDescInput"
                          >
                            Product Description
                          </label>
                          <TextArea
                            aria-describedby={null}
                            as="textarea"
                            id="adminProductFormDescInput"
                            onChange={[Function]}
                            placeholder="Product description here..."
                            rows={3}
                            value=""
                          >
                            <Ref
                              innerRef={
                                Object {
                                  "current": <textarea
                                    id="adminProductFormDescInput"
                                    placeholder="Product description here..."
                                    rows="3"
                                  />,
                                }
                              }
                            >
                              <RefFindNode
                                innerRef={
                                  Object {
                                    "current": <textarea
                                      id="adminProductFormDescInput"
                                      placeholder="Product description here..."
                                      rows="3"
                                    />,
                                  }
                                }
                              >
                                <textarea
                                  aria-describedby={null}
                                  id="adminProductFormDescInput"
                                  onChange={[Function]}
                                  onInput={[Function]}
                                  placeholder="Product description here..."
                                  rows={3}
                                  value=""
                                />
                              </RefFindNode>
                            </Ref>
                          </TextArea>
                        </div>
                      </FormField>
                      <FormField
                        control={[Function]}
                        id="adminProductFormDetailsInput"
                        label="Product Details"
                        onChange={[Function]}
                        placeholder="Product details here..."
                        value=""
                      >
                        <div
                          className="field"
                        >
                          <label
                            htmlFor="adminProductFormDetailsInput"
                          >
                            Product Details
                          </label>
                          <TextArea
                            aria-describedby={null}
                            as="textarea"
                            id="adminProductFormDetailsInput"
                            onChange={[Function]}
                            placeholder="Product details here..."
                            rows={3}
                            value=""
                          >
                            <Ref
                              innerRef={
                                Object {
                                  "current": <textarea
                                    id="adminProductFormDetailsInput"
                                    placeholder="Product details here..."
                                    rows="3"
                                  />,
                                }
                              }
                            >
                              <RefFindNode
                                innerRef={
                                  Object {
                                    "current": <textarea
                                      id="adminProductFormDetailsInput"
                                      placeholder="Product details here..."
                                      rows="3"
                                    />,
                                  }
                                }
                              >
                                <textarea
                                  aria-describedby={null}
                                  id="adminProductFormDetailsInput"
                                  onChange={[Function]}
                                  onInput={[Function]}
                                  placeholder="Product details here..."
                                  rows={3}
                                  value=""
                                />
                              </RefFindNode>
                            </Ref>
                          </TextArea>
                        </div>
                      </FormField>
                    </form>
                  </Form>
                  <Button
                    as="button"
                    content="Create  New Product"
                    id="adminProductFormCreate"
                    onClick={[Function]}
                    type="button"
                  >
                    <Ref
                      innerRef={
                        Object {
                          "current": <button
                            class="ui button"
                            id="adminProductFormCreate"
                            type="button"
                          >
                            Create  New Product
                          </button>,
                        }
                      }
                    >
                      <RefFindNode
                        innerRef={
                          Object {
                            "current": <button
                              class="ui button"
                              id="adminProductFormCreate"
                              type="button"
                            >
                              Create  New Product
                            </button>,
                          }
                        }
                      >
                        <button
                          className="ui button"
                          id="adminProductFormCreate"
                          onClick={[Function]}
                          type="button"
                        >
                          Create  New Product
                        </button>
                      </RefFindNode>
                    </Ref>
                  </Button>
                </div>
              </ProductForm>
            </div>
          </GridColumn>
        </div>
      </GridRow>
    </div>
  </ProductFormContainer>
</withRouter(ProductFormContainer)>
`;
